# therapeutic-accelerator

./: .gitignore  Exploratory Analysis.ipynb  LICENSE  README.md  nohup.out  pyproject copy.toml  pyproject.toml
Base_Models/: BioBERT-BERT Summarizer.ipynb  DB_Connector.ipynb  LangChainModel.ipynb  SummaryEvaluation.ipynb  TA_BaseModels.ipynb
Base_Models/.ipynb_checkpoints/: DB_Connector-checkpoint.ipynb
EDA/: Exploratory Analysis.ipynb
Model Eval/: Model Eval - Lang Chain-2.ipynb  Model Eval - Lang Chain-3.ipynb  Model Eval - Lang Chain.ipynb  Model Eval - T5.ipynb  Untitled.ipynb  scores.csv
Web Deliverable/: Therapeutic Accelerator Showcase.ipynb
config/: main.yaml
custom_packages/database/: chroma_connection.py  create_sqlalchemy_engine.py  db_tools.py
custom_packages/models/: model_functions.py
custom_packages/utils/: chromaDB.py  chromaDB_connection.py  db_tools.py  parse_text.py  upload_abstracts_specter.py  utils.py  write_fulltext_to_chromadb.py
data/: Full_Text_Papers.ipynb
data/cleanup/: get_full_text-Copy1.ipynb  get_full_text.py  get_papers.py
db_work/: create_authors_table.ipynb  create_embeddings.ipynb  data_parsing.ipynb  db_uploader.py  extract_full_text.py  get_full_text-Copy1.ipynb  get_full_text.ipynb  inspect_db.ipynb  pgs_connection.sh  pull_abstracts_upload.ipynb  sql_db_connection.py  test.ipynb  test.py  upload_attributes_todb.ipynb  upload_fulltext.ipynb
db_work/chroma_db/: parse_fulltext_for_chroma.ipynb
db_work/data_cleanup/: full_text_parser.ipynb
db_work/db_chroma_setup/: abstract_embeddings_docker.ipynb  create_abstract_embeddings_spector.ipynb  create_chroma_db.ipynb  mydask.html  port_forward_dask.1:8787 nlee-dev-ub
db_work/db_cleanup/: db_cleanup.ipynb  inspect_db.ipynb
db_work/df_setup/: full_text_parser.ipynb
db_work_setup/: upload_csv.ipynb
dev/: parse_full_text_papers.ipynb
embeddings_creation/: create_full_text_embeddings_chroma.py  fulltext.ipynb  fulltext_to_chroma.py  llama_indexing.ipynb  mydask.html
environment ymls/: conda_environment.yml
examples/: sql_examples.ipynb
interface/: input_prompt.py
latest_models/: BigBirdPegasus Summarization.ipynb  BioGPT Summary Text Generation.ipynb  LED Summary Model.ipynb  LangChain Summary & Q&A.ipynb  Summary & Q&A Models.ipynb  T5 Summary & Q&A.ipynb
logs/: finished_fulltext_files.txt
model_work/: openai.ipynb  prompt_engineering.ipynb  qa.ipynb  query_chroma.ipynb
models/: prompt_engineering.ipynb
modularized_code/: user_message_flow.py
old/: Semantic_Scholar_and_PubMed_API.ipynb
prompt_engineering/: prompt_engineering.ipynb
scripts/: base.py  clear_caches.sh  restart_script_abstracts.sh  restart_script_fulltext.sh  semantic-dataset-info.py  sqlalchemy.py  write_parquet_from_sql.py
setup/: conda_environment.yml  create_conda_env.sh  environment.yml  setup_ec2_ubuntu_instance.sh  setup_environment.sh  start_jlab.sh
similarity/: DB_work_fix_corpusid.txt  Final_Similiarty_Functions.ipynb  Similarity - 1.ipynb  Similarity_3.ipynb  Similiarty - 3.ipynb  example 2.rtf  example 3.rtf  masters_similar_papers.sql  terminal_lextokens.rtf  terminal_lextokens.txt  terminal_update_pgvector.txt
testing/: testing_sql.ipynb
(+86 files in other folders)
