[tool.poetry]
name = "therapeutic-accelerator"
version = "0.1.0"
description = "work for AI research assistant"
authors = ["Nicholas Lee <nick.lee@berkeley.edu>"]
readme = "README.md"
packages = [{include = "therapeutic_accelerator"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.0.3"
seaborn = "^0.12.2"
transformers = "^4.30.2"
tensorflow = "^2.13.0"
sentencepiece = "^0.1.99"
metapub = "^0.5.5"
semanticscholar = "^0.4.1"
SQLAlchemy = "^2.0.18"
psycopg2 = "^2.9.6"
distributed = "^2023.7.0"
jupyterlab = "^4.0.2"
ipykernel = "^6.24.0"
jupyter-contrib-nbextensions = "^0.7.0"
sacremoses = "^0.0.53"
hnswlib = "^0.7.0"
requests = "^2.31.0"
tqdm = "^4.65.0"
torch = ">=2.0.0,<2.0.1 || >2.0.1"
boto3 = "^1.28.2"
tiktoken = "^0.4.0"
pypdf = "^3.12.1"
pathlib = "^1.0.1"
huggingface-hub = "^0.16.4"
ipywidgets = "^8.0.7"
sentence-transformers = "^2.2.2"
scikit-learn = "^1.3.0"
scipy = "^1.11.1"
openai = "^0.27.8"
autodoc-pydantic = "^1.9.0"
langchain = "~0.0.22"
pydantic = "^1.10.0"
chromadb = "0.3.26"
nltk = "^3.8.1"
llama-index = "^0.7.8"
pyarrow = "^12.0.1"
bokeh = "!=3.0.*,>=2.4.2"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
