[tool.poetry]
name = "therapeutic-accelerator"
version = "0.1.0"
description = "work for AI research assistant"
authors = ["Nicholas Lee <nick.lee@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.3"
seaborn = "^0.12.2"
python-dotenv = "^1.0.1"
semanticscholar = "^0.8.0"
autoflake = "^2.3.1"
jsonlines = "^4.0.0"
duckdb = "^0.10.2"
chardet = "^5.2.0"
sqlalchemy = "^2.0.29"
pyarrow = "^16.0.0"
fastparquet = "^2024.2.0"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.0.7"
jupyterlab = "^4.0.2"
ipykernel = "^6.24.0"
jupyter-contrib-nbextensions = "^0.7.0"

[tool.poetry.group.test.dependencies]
autodoc-pydantic = "^1.9.0"
pydantic = "^1.10.0"
pytest = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
